--- a/Assets/OrbitaGames/UI/HUDDocument.uxml
+++ b/Assets/OrbitaGames/UI/HUDDocument.uxml
@@ -2,15 +2,15 @@
     <Style src="project://database/Assets/OrbitaGames/UI/PlayerIconStates.uss?fileID=7433441132597879392&amp;guid=4b9f430050dd42b4bb76546b91e84c24&amp;type=3#PlayerIconStates" />
     <ui:VisualElement name="HUDContainer" focusable="true" style="height: 40%; width: 25%; align-items: stretch; justify-content: space-around; padding-left: 2%; padding-bottom: 0; padding-top: 2%;">
         <ui:VisualElement name="IceIcon" class="Icon" style="width: 25%; height: 25%; -unity-background-image-tint-color: rgb(164, 98, 98); background-color: rgba(76, 177, 178, 0.75); align-items: flex-end; justify-content: flex-start;">
-            <ui:ProgressBar title="my-progress" name="IceBoostHP" style="width: 100%; left: 70%; align-items: auto; height: 30%; rotate: 90deg; top: 50%; right: 0; bottom: 0; margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0;" />
+            <ui:ProgressBar title="my-progress" name="IceBoostHP" class="progressBarBoost" />
         </ui:VisualElement>
         <ui:ProgressBar title="my-progress" name="IceHealthHP" class="progressBarHP" />
         <ui:VisualElement name="WaterIcon" class="Icon">
-            <ui:ProgressBar title="my-progress" name="WaterBoostHP" style="width: 100%; left: 70%; align-items: auto; height: 30%; rotate: 90deg; top: 50%; right: 0; bottom: 0; margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0;" />
+            <ui:ProgressBar title="my-progress" name="WaterBoostHP" class="progressBarBoost" style="width: 100%; left: 70%; align-items: auto; height: 30%; rotate: 90deg; top: 50%; right: 0; bottom: 0; margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0;" />
         </ui:VisualElement>
         <ui:ProgressBar title="my-progress" name="WaterHealthHP" class="progressBarHP" />
         <ui:VisualElement name="AirIcon" class="Icon" style="width: 25%; height: 25%; -unity-background-image-tint-color: rgb(164, 98, 98); background-color: rgba(254, 255, 255, 0.75);">
-            <ui:ProgressBar title="my-progress" name="AirBoostHP" style="width: 100%; left: 70%; align-items: auto; height: 30%; rotate: 90deg; top: 50%; right: 0; bottom: 0; margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0;" />
+            <ui:ProgressBar title="my-progress" name="AirBoostHP" class="progressBarBoost" style="width: 100%; left: 70%; align-items: auto; height: 30%; rotate: 90deg; top: 50%; right: 0; bottom: 0; margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0;" />
         </ui:VisualElement>
         <ui:ProgressBar title="my-progress" name="AirHealthHP" high-value="1" class="progressBarHP" style="width: 25%; left: 0; align-items: auto; margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; height: auto;" />
     </ui:VisualElement>
